fix a bug on edit, added CSS alignment of check boxes.

--- a/src/app/dashboard/onboarding-form/onboarding-form.component.css
+++ b/src/app/dashboard/onboarding-form/onboarding-form.component.css
@@ -1,84 +1,84 @@
 
 .message {
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: large;
-    color: blue;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  color: blue;
 }
 
 .container{
-    border-radius: 5px;
-    background-color: #f2f2f2;
-    padding: 70px;
-    border: 1px solid black;
-    outline-style: solid;
-    outline-color:silver;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 70px;
+  border: 1px solid black;
+  outline-style: solid;
+  outline-color:silver;
 }
 
 .box{
-     margin-left : 50%;
-     width: 70%;
-     margin-top: -45px;
+  margin-left : 50%;
+  width: 70%;
+  margin-top: -45px;
 }
 
-
-
-
-
 .header{
-    margin-left : 32%;
-    width: 75%;
-    
+  margin-left : 32%;
+  width: 75%;
 }
 
 input[type=text],[type=date] {
-    width: 60%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    resize: vertical;
-  }
+  width: 60%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
 
 #category{
-    width: 60%;
-    padding: 4px;
-    resize: vertical;
+  width: 60%;
+  padding: 4px;
+  resize: vertical;
 
 }
-  label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-  }
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
 
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
-  input[type=submit] {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 20px 50px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-    margin-left : 46%;
-    margin-top:60px;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
+input[type=submit] {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 20px 50px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+  margin-left : 46%;
+  margin-top:60px;
+}
 
-  .backbutton{
-      margin-right:10px;
-  }
+input[type=submit]:hover {
+  background-color: #45a049;
+}
 
-  @media screen and (max-width: 500px) {
-    .header, .box, input[type=text] {
-      width: 80%;
-      margin-top: 0;
-    }
+.backbutton{
+    margin-right:10px;
+}
+
+@media screen and (max-width: 500px) {
+  .header, .box, input[type=text] {
+    width: 80%;
+    margin-top: 0;
   }
+}
+
+.checkbox-alignment {
+  float: right; 
+  margin-right: 75%;
+}
